objects/Product2.object
<CustomObject><fields>
        <fullName>Approval_Threshold__c</fullName>
        <defaultValue>0.15</defaultValue>
        <inlineHelpText>Maximum discount allowed by sales rep before manager approval is required.</inlineHelpText>
        <label>Approval Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Attribute_1__c</fullName>
        <label>Conferencing</label>
        <picklist>
            <picklistValues>
                <fullName>Conference Room-in-a-Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projectors</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Attribute_2__c</fullName>
        <label>Portable Audio</label>
        <picklist>
            <picklistValues>
                <fullName>Headphones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop Audio</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Attribute_3__c</fullName>
        <label>Home Audio</label>
        <picklist>
            <picklistValues>
                <fullName>Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Room Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Theatre</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Guided_Selling__c</fullName>
        <inlineHelpText>Field used to filter products for Guided Selling.</inlineHelpText>
        <label>Guided Selling</label>
        <picklist>
            <picklistValues>
                <fullName>Full Conference Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Collaboration</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ID_for_Org_Customizer__c</fullName>
        <formula>RIGHT(purl__c , 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID for Org Customizer</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Item_Additional_Details__c</fullName>
        <description>Used in the custom Catalog UI found in the Order Console.</description>
        <label>Additional Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Item_Features__c</fullName>
        <description>Used in the custom Catalog UI found in the Order Console.</description>
        <label>Features</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Item_Image_Large__c</fullName>
        <label>Item Image Large</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Item_Image__c</fullName>
        <label>Item Image</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Item_Long_Description__c</fullName>
        <label>Item Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Item_MSRP__c</fullName>
        <label>Item MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Item_Short_Description__c</fullName>
        <label>Item Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Item_Specifications__c</fullName>
        <description>Used in the custom Catalog UI found in the Order Console.</description>
        <label>Specifications</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Model__c</fullName>
        <label>Product Model</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ProductImageRelatedList__c</fullName>
        <formula>IMAGE(purl__c , "No Image", 50, 85)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Product_Catalog__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Product_Image__c</fullName>
        <description>Used by the Org Customizer (Heroku) to display photos of products.</description>
        <formula>IMAGE(purl__c , "No Image", 300, 512)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Site_com_ID__c</fullName>
        <label>Site.com ID</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published to Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>purl__c</fullName>
        <formula>if((Image__c != '' || Image__c != null),LEFT($Api.Enterprise_Server_URL_290, FIND( "/services", $Api.Enterprise_Server_URL_290) -1) + '/servlet/servlet.FileDownload?file=' + Image__c,LEFT($Api.Enterprise_Server_URL_290, FIND( "/services", $Api.Enterprise_Server_URL_290) -1) + '/resource/no_product_image')</formula>
        <label>purl</label>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>ProductImageRelatedList__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>Product_Family_Service</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>ProductImageRelatedList__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <label>Product Family "Service"</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>Products_Product_Family</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>ProductImageRelatedList__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Product</value>
        </filters>
        <label>Product Family "Products"</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><recordTypes>
        <fullName>Catalog_Products</fullName>
        <active>true</active>
        <description>This record type displays attributes that are specific to the custom Catalog found in the Order Console.</description>
        <label>Catalog Products</label>
    </recordTypes><recordTypes>
        <fullName>Cirrus_Parts</fullName>
        <active>true</active>
        <description>All Cirrus Child Products sit under this record type (i.e. part of another asset)</description>
        <label>Cirrus Parts</label>
    </recordTypes><recordTypes>
        <fullName>Cirrus_Products</fullName>
        <active>true</active>
        <description>All Root SDO CIrrus Products sit within this record type (no child assets)</description>
        <label>Cirrus Products</label>
    </recordTypes><recordTypes>
        <fullName>General_Products</fullName>
        <active>true</active>
        <label>General Products</label>
    </recordTypes></CustomObject>